tests/invalid_ast_samples/7fd6bed5fa4d23b893d2148b15a559bec1521a0fc28209b2557d2f30a73b7372.py
from ast import Break
from ast import Module

tree = Module(body=[Break()], type_ignores=[])

# Source:
# break
# Error:
#     SyntaxError("'break' outside loop", ('<file>', 1, 1, None, 1, 6))
